2006-11-06 [wwp]	2.6.0cvs2

	* src/prefs_quote.c
	* src/prefs_template.c
	* src/prefs_template.h
		check quote format when applying/closing prefs. For now this only
		shows up an error dialog box, not preventing the user from using
		a broken quote (reply, forwards) format.

2006-11-06 [wwp]	2.6.0cvs1

	* src/prefs_template.c
		fix missing checks of some template fields.

2006-11-06 [paul]	2.6.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.6.0 released

2006-11-06 [paul]	2.5.6cvs22

	* manual/advanced.xml
	* manual/es/advanced.xml
		put 'respect_flowed_format' info in the correct
		place

2006-11-06 [mones]	2.5.6cvs21

	* po/es.po
		Minor fixes for release

2006-11-06 [paul]	2.5.6cvs20

	* po/cs.po
	* po/de.po
	* po/fr.po
	* po/it.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sv.po
	* po/zh_CN.po
		updated by Tim Brain, Stephan Sachse, Fabien Vantard,
		Andrea Spadaccini, Tim Dijkstra, Frederico Goncalves
		Guimaraes, Andrej Kacian, Anders Troback, and Ralgh
		Young

2006-11-02 [colin]	2.5.6cvs19

	* src/imap.c
	* src/imap.h
	* src/prefs_account.c
	* src/etpan/imap-thread.c
		Add GSSAPI support - fixes Debian bug #383274

2006-11-01 [colin]	2.5.6cvs18

	* src/jpilot.c
		Handle libpisock12 support. Probably
		fixes bug 1046, 'jpilot AddressDB.pdb 
		import fail'

2006-11-01 [colin]	2.5.6cvs17

	* src/folderutils.c
		debug_print() folderutils_mark_all_read()

2006-11-01 [colin]	2.5.6cvs16

	* COPYING
		Add missed files to the Apache exception

2006-10-31 [colin]	2.5.6cvs15

	* src/folder.c
	* src/folder.h
		Add a copy_private_data() func to FolderClasses
		Doesn't break the feature freeze, because we 
		won't use it (right now) in the core.

2006-10-31 [colin]	2.5.6cvs14

	* COPYING
		Allow linking with the Apache licensed files in
		src/plugins/spamassassin. Hopefully fixes 
		bug 1048, 'Spamassassin plugin license problem'

2006-10-31 [wwp]	2.5.6cvs13

	* src/compose.c
		fix and optimize trimming of leading linefeeds in body loop.

2006-10-31 [colin]	2.5.6cvs12
