@@ -2027,3 +2027,4 @@
 ( cvs diff -u -r 1.1.2.31 -r 1.1.2.32 manual/advanced.xml;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 manual/es/advanced.xml;  ) > 2.5.6cvs22.patchset
 ( cvs diff -u -r 1.12.2.33 -r 1.12.2.34 src/prefs_template.c;  ) > 2.6.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/prefs_quote.c;  cvs diff -u -r 1.12.2.34 -r 1.12.2.35 src/prefs_template.c;  cvs diff -u -r 1.1.16.2 -r 1.1.16.3 src/prefs_template.h;  ) > 2.6.0cvs2.patchset
+( cvs diff -u -r 1.382.2.321 -r 1.382.2.322 src/compose.c;  cvs diff -u -r 1.36.2.86 -r 1.36.2.87 src/common/utils.c;  cvs diff -u -r 1.20.2.40 -r 1.20.2.41 src/common/utils.h;  ) > 2.6.0cvs3.patchset
